--- a/app/templates/tag/index.html.twig
+++ b/app/templates/tag/index.html.twig
@@ -36,7 +36,7 @@
                 <tr>
                     <td>{{ tag.id }}</td>
                     <td>{{ tag.title }}</td>
-                    <td>{{ tag.createdAt|date('Y-m-d') }}</td>
+                    <td>{{ tag.createdAt|date('Y/m/d') }}</td>
                     <td>{{ tag.updatedAt|format_date('long') }}</td>
                     <td><a href="{{ path('tag_show', {'id': tag.id}) }}">{{ 'button.action_show'|trans }}</a></td>
                     <td><a href="{{ path('tag_edit', {'id': tag.id}) }}">{{ 'button.action_edit'|trans }}</a></td>
