--- a/app/templates/user/show.html.twig
+++ b/app/templates/user/show.html.twig
@@ -1,24 +1,24 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ 'title.record_view'|trans }} {{ task.id }}{% endblock %}
+{% block title %}{{ 'title.record_view'|trans }} {{ user.id }}{% endblock %}
 
 {% block body %}
 
 
 
-    {% if task is defined %}
-        <h3>{{ 'label.id'|trans }}: {{ task.id }}</h3>
-        <h3>Tytuł</h3>
-        <p>{{ task.title }}</p>
+    {% if user is defined %}
+        <h3>{{ 'label.id'|trans }}: {{ user.id }}</h3>
+        <h3>{{ 'label.user_in'|trans }}</h3>
+        <p>{{ user.userIn }}</p>
 {#        <h3>Komentarz</h3>#}
-{#        <p>{{ task.comment }}</p>#}
-        <h3>{{ 'label.created_at'|trans }}</h3>
-        <p>{{ task.createdAt|date('Y-m-d') }}</p>
-        <h3>{{ 'label.updated_at'|trans }}</h3>
-        <p>{{ task.updatedAt|date('Y-m-d') }}</p>
-        <h3>{{ 'label.category'|trans }}</h3>
-        <p>{{ task.category.title }}</p>
-        <a href="{{ url('task_index') }}" title="{{ 'action.back_to_list'|trans }}">
+{#        <p>{{ user.comment }}</p>#}
+        <h3>{{ 'label.user_out'|trans }}</h3>
+        <p>{{ user.userOut }}</p>
+        <h3>{{ 'label.add_date'|trans }}</h3>
+        <p>{{ user.addDate|date('Y-m-d') }}</p>
+        <h3>{{ 'label.click_counter'|trans }}</h3>
+        <p>{{ user.clickCounter }}</p>
+        <a href="{{ url('user_index') }}" title="{{ 'action.back_to_list'|trans }}">
             {{ 'action.back_to_list'|trans }}
         </a>
     {% else %}
