--- a/app/templates/address/delete.html.twig
+++ b/app/templates/address/delete.html.twig
@@ -1,5 +1,5 @@
 {% include 'default/_form.html.twig' with {
-    page_title: 'title.category_delete'|trans({'%id%': address.id|default('')}),
+    page_title: 'title.address_delete'|trans({'%id%': address.id|default('')}),
     form: form,
     submit_label: 'action.delete'|trans,
     back_to_list_path: 'address_index',
