--- a/app/templates/address/edit.html.twig
+++ b/app/templates/address/edit.html.twig
@@ -1,5 +1,5 @@
 {% include 'default/_form.html.twig' with {
-    page_title: 'title.category_edit'|trans({'%id%': address.id|default('')}),
+    page_title: 'title.address_edit'|trans({'%id%': address.id|default('')}),
     form: form,
     submit_label: 'action.edit'|trans,
     back_to_list_path: 'address_index',
