--- a/app/templates/address/show.html.twig
+++ b/app/templates/address/show.html.twig
@@ -8,7 +8,7 @@
 
     {% if address is defined %}
         <h3>{{ 'label.id'|trans }}: {{ address.id }}</h3>
-        <h3>Tytuł</h3>
+        <h3>{{ 'label.address_in'|trans }}</h3>
         <p>{{ address.addressIn }}</p>
 {#        <h3>Komentarz</h3>#}
 {#        <p>{{ address.comment }}</p>#}
