--- a/app/templates/user/index.html.twig
+++ b/app/templates/user/index.html.twig
@@ -6,13 +6,10 @@
 
     <ul class="nav">
         <li class="nav-item">
-            <a class="nav-link" href="{{ path('task_index') }}">Zadania</a>
+            <a class="nav-link" href="{{ path('user_index') }}">{{ "label.useres"|trans }}</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" href="{{ path('category_index') }}">Kategorie</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" href="{{ path('tag_index') }}">Tagi</a>
+            <a class="nav-link active" href="{{ path('tag_index') }}">{{ "label.tags"|trans }}</a>
         </li>
     </ul>
 
@@ -29,39 +26,28 @@
             <tr>
                 <th>{{ knp_pagination_sortable(pagination, 'label.id'|trans, 'user.id') }}</th>
                 <th>{{ knp_pagination_sortable(pagination, 'label.email'|trans, 'user.email') }}</th>
-                <th>{{ knp_pagination_sortable(pagination, 'label.roles'|trans, 'user.roles') }}</th>
                 <th>{{ knp_pagination_sortable(pagination, 'label.password'|trans, 'user.password') }}</th>
                 <th>{{ 'label.actions'|trans }}</th>
             </tr>
             </thead>
             <tbody>
+
             {% for user in pagination.items %}
                 <tr>
                     <td>{{ user.id }}</td>
                     <td>{{ user.email }}</td>
-                    <td>
-                        {% for role in user.roles %}
-                            {{ role }},
-                        {% endfor %}
-                    </td>
                     <td>{{ user.password }}</td>
-
                     <td>
-                        {% if is_granted('VIEW', user) %}
+
                             <a class="btn btn-outline-primary" href="{{ url('user_show', {id: user.id}) }}" title="{{ 'button.action_show'|trans }}">
                                 {{ 'button.action_show'|trans }}
                             </a>
-                        {% endif %}
-                        {% if is_granted('EDIT', user) %}
                             <a class="btn btn-outline-success" href="{{ url('user_edit', {id: user.id}) }}" title="{{ 'button.action_edit'|trans }}">
                                 {{ 'button.action_edit'|trans }}
                             </a>
-                        {% endif %}
-                        {% if is_granted('DELETE', user) %}
                             <a class="btn btn-outline-danger" href="{{ url('user_delete', {id: user.id}) }}" title="{{ 'button.action_delete'|trans }}">
                                 {{ 'button.action_delete'|trans }}
                             </a>
-                        {% endif %}
                     </td>
                 </tr>
             {% endfor %}
