--- a/app/templates/tag/index.html.twig
+++ b/app/templates/tag/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ 'title.record_list'|trans }}{% endblock %}
+{% block title %}{{ 'title.tag_list'|trans }}{% endblock %}
 
 {% block body %}
 
