--- a/app/templates/address/index.html.twig
+++ b/app/templates/address/index.html.twig
@@ -27,7 +27,7 @@
                 <th>{{ 'label.id'|trans}}</th>
                 <th>{{ 'label.address_in'|trans }}</th>
                 <th>{{ 'label.address_out'|trans}}</th>
-                <th>{{ knp_pagination_sortable(pagination, 'label.add_date'|trans, 'address.add_date') }}</th>
+                <th>{{ knp_pagination_sortable(pagination, 'label.add_date'|trans, 'address.addDate') }}</th>
                 <th>{{ knp_pagination_sortable(pagination, 'label.click_counter'|trans, 'address.clickCounter') }}</th>
                 <th>{{'label.tags'|trans }}</th>
                 <th>{{ 'label.actions'|trans }}</th>
